product page done

--- a/sass/include/variables.scss
+++ b/sass/include/variables.scss
@@ -3,4 +3,4 @@ $font-josefin: 'Josefin Sans', sans-serif;
 $font-pt: 'PT Sans Narrow', sans-serif;
 $color-primary: #003859;
 $color-secondary:#00A5C4;
-$color-yellow:#FFFF00;
+$color-yellow:#dfdf16;
